[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medscribe"
version = "0.1.0"
description = "A developer-friendly Python toolkit for processing, summarizing, and structuring clinical/medical notes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Officethree Technologies", email = "dev@officethree.com" },
]
keywords = ["clinical", "nlp", "medical", "healthcare", "ehr", "notes", "summarization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/officethree/MedScribe"
Repository = "https://github.com/officethree/MedScribe"
Issues = "https://github.com/officethree/MedScribe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/medscribe"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
